# proceda

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  IMPROVEMENT_REPORT.md  LICENSE  Makefile  README.md  proceda.yaml  proceda.yaml.example  pyproject.toml  skillrunner.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benchmarks/sop_bench/: generate_report.py  harness.py  mcp_bridge.py  output_extractor.py  run_batch.sh
docs/: architecture.md  blog-sop-bench-journey.md  blog-sota-sop-execution-engine.html  blog-sota-sop-execution-engine.md  configuration.md  product-spec.md  report-design-process.html  report-design-process.md  skill-format.md  sop-bench-aircraft-inspection.md  sop-bench-content-flagging.md  sop-bench-customer-service.md  sop-bench-dangerous-goods.md  sop-bench-email-intent-bug-report.md  sop-bench-guide.md  sop-bench-know-your-business.md  sop-bench-kyb-bug-report.md  sop-bench-order-fulfillment.md  sop-bench-patient-intake.md  sop-bench-referral-abuse-v1-bug-report.md  sop-bench-referral-abuse-v1.md  sop-bench-referral-abuse-v2.md  sop-bench-results.html  sop-bench-results.md  sop-bench-status.md  sop-bench-tool-agreement-audit.md  sop-bench-tool-csv-mismatch-analysis.md  sop-bench-traffic-spoofing-bug-report.md  sop-bench-traffic-spoofing.md  sop-bench-video-annotation-bug-report.md  sop-bench-video-classification.md  sop-bench-warehouse-bug-report.md  sop-bench-warehouse-inspection.md  sop-converter.md  technical-design.md
examples/: README.md
examples/change-management/: SKILL.md
examples/expense-processing/: SKILL.md
examples/plan-week/: SKILL.md  proceda.yaml
examples/support-escalation/: SKILL.md
examples/toy-greeting/: SKILL.md  proceda.yaml  run.py  time_left_server.py
scripts/: record-demo.sh
src/proceda/: __init__.py  (+11 more)
tests/: conftest.py
(+130 files in other folders)
