[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "proceda"
version = "0.1.1"
description = "A terminal-first, Python-native SDK for turning SOPs into runnable agents with built-in human oversight"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Vivek Haldar" }, { name = "Enchiridion Labs" }]
keywords = ["agent", "sop", "mcp", "cli", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "litellm>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "tiktoken>=0.5.0",
]

[project.urls]
Homepage = "https://enchiridionlabs.online/"
Repository = "https://github.com/vivekhaldar/proceda"
Documentation = "https://github.com/vivekhaldar/proceda#readme"
"Bug Tracker" = "https://github.com/vivekhaldar/proceda/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
proceda = "proceda.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/proceda"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

